<resources>
    <string name="app_name">BookStore</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_status">Enter status</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="status">Status</string>
    <string name="done">Done</string>
    <string name="title_activity_edit">EditActivity</string>
</resources>
